--- a/thai_tokenization_evolution.ipynb
+++ b/thai_tokenization_evolution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOakI90QwZsnHuOV8uPbTHL",
+      "authorship_tag": "ABX9TyPZ4nO/7nEa9CiHFZqUPwAQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Greedy First vocab match"
+        "Status:\n",
+        "\n",
+        "✅ Done\n",
+        "❌ Not yet"
+      ],
+      "metadata": {
+        "id": "N4_0f7JGFeIm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ✅ Greedy First vocab match"
       ],
       "metadata": {
         "id": "LETK3UAWwL08"
@@ -46,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RX3o8mDwvaEQ"
       },
@@ -65,7 +77,7 @@
       "metadata": {
         "id": "dE4D2Ti7vlwl"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +128,7 @@
         "id": "rozAyInxvrmv",
         "outputId": "2d626f5b-4b14-4b73-c1b1-08f91c1bb9c9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +168,7 @@
         "id": "qT4UtggdwlDb",
         "outputId": "1a3123e1-cf54-4b67-b119-494e461c4dc8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,7 +220,7 @@
       "metadata": {
         "id": "mGsswOfqDsPu"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +238,7 @@
         "id": "fVHXXGJ3U8Qc",
         "outputId": "af7e7a24-1689-407f-ff92-38be06c3c8b6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +285,7 @@
         "id": "dRFVNIoUdGhk",
         "outputId": "cb7792ff-f41e-4781-ba51-5fb55d94aae9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +388,7 @@
         "id": "9uODKOHaWUuQ",
         "outputId": "7b14fd49-c74f-4f20-cda5-ea90c2461905"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +438,7 @@
         "id": "I5blX3GPDmGQ",
         "outputId": "9286987a-acc1-45d1-f9d6-2034f11e6e08"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +486,7 @@
         "id": "bbelfMXlb05S",
         "outputId": "e6383bf6-4004-4c7f-e901-ff3853cec927"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +549,7 @@
         },
         "outputId": "6f79fcac-af44-478f-aabd-010c6ef7a3ce"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +575,7 @@
         "id": "lPKR3Suud95N",
         "outputId": "115296d8-e4bc-40a5-d5af-a6022bb9e97d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +600,7 @@
         "id": "38yNKKk8eW7n",
         "outputId": "2908e90a-ef79-4ebc-9326-8a1464411bd1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +639,7 @@
         "id": "-3387IdXedLu",
         "outputId": "57cbd6d8-cfa2-4784-db59-54aef457a1ad"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +734,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Maximal First vocab match (Maximal Matching)"
+        "# ✅ Maximal First vocab match (Maximal Matching)"
       ],
       "metadata": {
         "id": "u5inhYFX2sqy"
@@ -764,7 +776,7 @@
       "metadata": {
         "id": "58ZYh-TacAIS"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +797,7 @@
       "metadata": {
         "id": "vl_o7zEd6vQl"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -802,7 +814,7 @@
         "id": "ovHoXbyv6krb",
         "outputId": "1a699c08-d8f7-4377-d38d-b55a922a067d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +900,7 @@
         "id": "VNzHQQRg5_Kv",
         "outputId": "3d27216c-cf3b-4f5f-90d8-1c201786a348"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +958,7 @@
         "id": "0NOJ8R2o-hwW",
         "outputId": "8e64dd02-42b9-4d66-a6f7-108f88a47b7a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1023,7 @@
       "metadata": {
         "id": "mWHyUY6t_eea"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1028,7 +1040,7 @@
         "id": "QPRjs2qaAOhw",
         "outputId": "c7c54085-7803-4a2e-de2f-a6bbfe6449de"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,7 +1109,7 @@
         "id": "QMc3DnPcAxds",
         "outputId": "43943d2f-4ae1-42c4-ff09-794b5ec9d291"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,8 +1206,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "q43Wj-jAFZr-"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "# N-gram model "
+        "# ❌ N-gram model "
       ],
       "metadata": {
         "id": "e2omPX8uXDGp"
@@ -1230,7 +1249,7 @@
       "metadata": {
         "id": "3NJoHN3kXHOr"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1260,7 +1279,7 @@
       "metadata": {
         "id": "Sea7tp6bZLzp"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1312,7 +1331,7 @@
         "id": "Rpm1JZLDYMJo",
         "outputId": "6a2be9f7-c570-4ef3-801d-b5cf8be90e73"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1396,7 @@
         "id": "6fASwY7m7jy_",
         "outputId": "e52846b1-2a50-4e27-c94f-33bb53d3d8be"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1394,7 +1413,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Maximal Matching + Thai Character Cluster (TCC)"
+        "# ❌ Maximal Matching + Thai Character Cluster (TCC)"
       ],
       "metadata": {
         "id": "GskYVXdpG3yr"
@@ -1445,7 +1464,7 @@
       "metadata": {
         "id": "Ue3txJDTNPRS"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1489,7 +1508,7 @@
       "metadata": {
         "id": "YlI1P--QTnKY"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1560,7 +1579,7 @@
       "metadata": {
         "id": "VoBLJSJgG4xX"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1575,7 +1594,7 @@
         "id": "g2x0IofFNSPK",
         "outputId": "fec5e11b-17b3-4752-d72d-ae6a72f321e4"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1592,7 +1611,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Deepcut"
+        "# ❌ Deepcut"
       ],
       "metadata": {
         "id": "pFTP__8Vm1Sp"
@@ -1642,7 +1661,7 @@
       "metadata": {
         "id": "-CmO9FOIcyQL"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
